<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_bg_inner"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/back"
            android:text="@string/change_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6"
        android:padding="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/oldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/settings_item_border"
                    android:drawablePadding="16dp"
                    android:gravity="start|center"
                    android:hint="@string/enter_old_password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_40sdp"
                    android:paddingEnd="4dp"
                    android:textColor="@color/textColor4"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center">

                    <com.hermes.chat.status.CircleView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:src="@color/colorPrimary" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_change_password"
                        android:tint="@android:color/white" />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/settings_item_border"
                    android:drawablePadding="16dp"
                    android:gravity="start|center"
                    android:hint="@string/enter_new_password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_40sdp"
                    android:paddingEnd="4dp"
                    android:textColor="@color/textColor4"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:gravity="center">

                    <com.hermes.chat.status.CircleView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_centerHorizontal="true"
                        android:src="@color/colorPrimary" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_change_password"
                        android:tint="@android:color/white" />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/settings_item_border"
                    android:drawablePadding="16dp"
                    android:gravity="start|center"
                    android:hint="Enter Confirm Password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_40sdp"
                    android:paddingEnd="4dp"
                    android:textColor="@color/textColor4"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:gravity="center">

                    <com.hermes.chat.status.CircleView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:src="@color/colorPrimary" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_change_password"
                        android:tint="@android:color/white" />

                </RelativeLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_45sdp"
                android:background="@drawable/button_border"
                android:text="@string/submit"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>