<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_detail_inner"
    android:clickable="true"
    android:orientation="vertical"
    tools:context="com.hermes.chat.activities.SignInActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_125sdp"
        android:layout_height="@dimen/_125sdp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_45sdp"
        android:src="@drawable/ic_otp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingTop="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingBottom="@dimen/_20sdp">

            <TextView
                android:id="@+id/layout_registration_hint_TXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/label_signin_registration_hint"
                android:textColor="@color/textColor0"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/layout_signin_country_hint_TXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_registration_hint_TXT"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/txt_country"
                android:textColor="@color/textColor2"
                android:textSize="@dimen/_14sdp" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/countryCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_signin_country_hint_TXT" />

            <View
                android:id="@+id/countryCodeDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/countryCode"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="24dp"
                android:background="@color/colorAccent" />


            <TextView
                android:id="@+id/layout_signin_mob_number_hint_TXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/countryCodeDivider"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/txt_phone_number"
                android:textColor="@color/textColor2"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:id="@+id/layout_phone_number_input_LLY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_signin_mob_number_hint_TXT"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/layout_registration_country_code_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text=""
                    android:textColor="@color/textColor0"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:background="@null"
                    android:hint="Your phone number"
                    android:inputType="phone"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/layout_phone_number_input_LLY"
                android:background="@color/colorAccent" />


            <LinearLayout
                android:id="@+id/parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="Email"
                    android:textColor="@color/textColor2"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@null"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="Username"
                    android:textColor="@color/textColor2"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@null"
                    android:hint="Username"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="Password"
                    android:textColor="@color/textColor2"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@null"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:text="@string/message_otp"
                android:textSize="16sp"
                android:visibility="gone" />


        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <View
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/textColor1" />

        <View
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:background="@color/textColor3" />

    </LinearLayout>

    <ImageView
        android:id="@+id/submit"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_15sdp"
        android:src="@drawable/ic_submit" />
</RelativeLayout>
